--- a/templates/marketdb/lista_produto.html
+++ b/templates/marketdb/lista_produto.html
@@ -1,4 +1,19 @@
-{% extends 'share_layout/nav.html' %}
-<h1>
-    Tilt
-</h1>
+<table>
+    <thead>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">Nome do Produto</th>
+            <th scope="col">Preço</th>
+        </tr>
+    </thead>
+    {% for value in List %}
+    <tbody>
+        <tr>
+            <th scope="row">{{value.id}}</th>
+            <td>{{value.titulo}}</td>
+            <td>{{value.preco}}</td>
+		    <td><img src="/{{ BASIC_DIR }}/{{img.img}}" width="120"/></td>
+        </tr>
+    </tbody>
+    {% endfor %}
+</table>
