--- a/templates/home.html
+++ b/templates/home.html
@@ -5,9 +5,9 @@
 {% block content %}
 {% if user.is_authenticated %}
   Hi {{ user.username }}!
-  <p><a href="{% url 'logout' %}">Log Out</a></p>
+  <p><a href="{% url 'logout' %}">Sair</a></p>
 {% else %}
-  <p>You are not logged in</p>
-  <a href="{% url 'login' %}">Log In</a>
+  <p>Você não está logado!</p>
+  <a href="{% url 'login' %}">Conectar</a>
 {% endif %}
 {% endblock %}
