--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 
-{% block title %}Login{% endblock %}
+{% block title %}BROOKLYNSMARKET{% endblock %}
 
 {% block content %}
-<h2>Log In</h2>
+<h2>Entrar</h2>
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
-  <button type="submit">Log In</button>
+  <button type="submit">Entrar</button>
 </form>
 {% endblock %}
