--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -3,10 +3,10 @@
 {% block title %}Sign Up{% endblock %}
 
 {% block content %}
-  <h2>Sign up</h2>
+  <h2>Entrar</h2>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Sign Up</button>
+    <button type="submit">Entrar</button>
   </form>
 {% endblock %}
