--- a/templates/share_layout/base.html
+++ b/templates/share_layout/base.html
@@ -51,7 +51,7 @@
         {% endblock head_css %}
     </head>
     <body>
-    {% include 'share_layout/nav.html' with nome_da_marca="Budega"%}
+    {% include 'share_layout/nav.html' with nome_da_marca="Brooklyn's Market"%}
     {% block content %}{% endblock %}
     </body>
 </html>
