--- a/templates/share_layout/home.html
+++ b/templates/share_layout/home.html
@@ -1,10 +1,10 @@
-{% extends 'share_layout/base.html' %}
+{% comment %} {% extends 'share_layout/base.html' %} {% endcomment %}
 
 {% block title %}Home{% endblock %}
 
 {% block content %}
 {% if user.is_authenticated %}
-  Hi {{ user.username }}!
+  <p class="h1 text-danger">Olá, {{ user.username }}!</p>
   <p><a href="{% url 'logout' %}">Log Out</a></p>
 {% else %}
   <p>You are not logged in</p>
