--- a/templates/share_layout/nav.html
+++ b/templates/share_layout/nav.html
@@ -4,6 +4,8 @@
 {% url 'login' as login_url %}
 {% url 'logout' as logout_url %}
 {% url 'register' as register_url %} {% endcomment %}
+{% url 'login' as login_url %}
+
 {% load icon %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-gradient mb-3">
   <div class='container'>
@@ -22,9 +24,6 @@
       <ul class="navbar-nav mr-auto">
         <li class="nav-item {% if request.path == home_url %} active {% endif %}">
           <a class="nav-link" href="{{ home_url }}">Home <span class="sr-only"></span></a>
-        </li>
-        <li class="nav-item {% if request.path == contact_url %} active {% endif %}">
-          <a class="nav-link" href="../marketdb/lista_produto.html">Contato</a>
         </li>
         <li class="nav-item {% if request.path == products_list_url %} active {% endif %}">
           <a class="nav-link" href="{{ products_list_url }}">Produtos</a>
