--- a/templates/share_layout/nav.html
+++ b/templates/share_layout/nav.html
@@ -2,14 +2,15 @@
 {% url 'contact' as contact_url %}
 {% url 'products:list' as products_list_url %}
 {% url 'login' as login_url %}
+ {% endcomment %}
 {% url 'logout' as logout_url %}
-{% url 'register' as register_url %} {% endcomment %}
+{% url 'register' as register_url %}
 {% url 'login' as login_url %}
 
 {% load icon %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-gradient mb-3">
   <div class='container'>
-    <a class="navbar-brand" href="{{ home_url }}">
+    <a class="navbar-brand" href="{{ '/' }}">
       {% comment %} <img src="https://lh3.googleusercontent.com/FNEQBKkePPPWR_ecVU2iZHfxiwp-JEBak0Gt4kVrHGUTkvpIGKNnvQSczpUn1HMNbR9fr0IqCOnyKcneRA=w1080-h608-p-no-v0" width="30" height="30" class="d-inline-block align-top" alt=""> {% endcomment %}
       {% if nome_da_marca %} 
       <span style="color=#7159c1; font-family: 'Handlee', cursive;">{{ nome_da_marca }}</span> 
@@ -22,12 +23,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item {% if request.path == home_url %} active {% endif %}">
-          <a class="nav-link" href="{{ home_url }}">Home <span class="sr-only"></span></a>
-        </li>
-        <li class="nav-item {% if request.path == products_list_url %} active {% endif %}">
+        {% comment %} <li class="nav-item {% if request.path == products_list_url %} active {% endif %}">
           <a class="nav-link" href="{{ products_list_url }}">Produtos</a>
-        </li>
+        </li> {% endcomment %}
         {% if request.user.is_authenticated %}
         <li class="nav-item {% if request.path == login_url %} active {% endif %}"> 
           <a class="nav-link" href="{{ logout_url }}">Logout</a> 
@@ -36,7 +34,7 @@
         <li class="nav-item {% if request.path == login_url %} active {% endif %}">
           <a class="nav-link" href="{{ login_url }}">Login</a>
         </li>
-        <li class="nav-item {% if request.path == register %} active {% endif %}"> 
+        <li class="nav-item {% if request.path == register_url %} active {% endif %}"> 
           <a class="nav-link" href="{{ register_url }}">Registrar-se</a> 
         </li>
       {% endif %}
