Ajuste da url de registro no template da barra de navegação

--- a/templates/share_layout/nav.html
+++ b/templates/share_layout/nav.html
@@ -4,7 +4,7 @@
 {% url 'login' as login_url %}
  {% endcomment %}
 {% url 'logout' as logout_url %}
-{% url 'register' as register_url %}
+{% url 'signup' as register_url %}
 {% url 'login' as login_url %}
 
 {% load icon %}
