--- a/templates/share_layout/base.html
+++ b/templates/share_layout/base.html
@@ -35,18 +35,14 @@
             {% endblock head_css_site %}
             {% block head_css_section %}{% endblock head_css_section %}
             {% block head_css_page %}
-                {% comment %} <style>
-                    * {
+                <style>
+                     html{
                         margin: 0;
                         padding: 0;
-                        background-color: #e2e2e2;
                         font-family: 'Open Sans', sans-serif;
-                    }
-
-                    h1 {
                         font-family: 'Handlee', cursive;
                     }
-                </style> {% endcomment %}
+                </style> 
             {% endblock head_css_page %}
         {% endblock head_css %}
     </head>
