--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,12 +1,13 @@
-{% extends 'share_layout/base.html' %}
-
-{% block title %}Login{% endblock %}
-
+{% extends 'share_layout/base.html' %} {% block title %}Entrar | Brooklyn's
+Market{% endblock %} 
 {% block content %}
-<h2>Log In</h2>
-<form method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Log In</button>
-</form>
+<div class="card text-center" style="width: 18rem; margin:auto">
+  <div class="card-body">
+    <h5 class="card-title">Entrar</h5>
+    <form method="post">
+      {% csrf_token %} {{ form.as_p }}
+      <button type="submit">Entrar</button>
+    </form>
+  </div>
+</div>
 {% endblock %}
