--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,12 +1,12 @@
 {% extends 'share_layout/base.html' %}
 
-{% block title %}Sign Up{% endblock %}
+{% block title %}Cadastrar | Brooklyn's Market{% endblock %}
 
 {% block content %}
-  <h2>Sign up</h2>
+  <h2>Cadastrar</h2>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Sign Up</button>
+    <button type="submit">Cadastrar</button>
   </form>
 {% endblock %}
