--- a/templates/share_layout/base.html
+++ b/templates/share_layout/base.html
@@ -36,11 +36,15 @@
             {% block head_css_section %}{% endblock head_css_section %}
             {% block head_css_page %}
                 <style>
-                     html{
+                    html {
                         margin: 0;
                         padding: 0;
                         font-family: 'Open Sans', sans-serif;
                         font-family: 'Handlee', cursive;
+                    }
+                    h5 {
+                        font-family: 'Open Sans', sans-serif;
+                        font-weight: 600;
                     }
                 </style> 
             {% endblock head_css_page %}
